# smurf

./: .gitignore  README.md  package.yaml  smurf.cabal  stack.yaml
app/: Main.hs
data/: sample1.txt
examples/: func.loc  sample1.loc  whitespace.loc
src/: Smurf.hs
src/Smurf/: AST.hs  Data.hs  Evaluator.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y
