name:           smurf
version:        0.1.0.0
description:    Nothing
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

library
  exposed-modules:
      Smurf 
      Smurf.Data
      Smurf.Parser
      Smurf.Lexer
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      parsec,
      text,
      mtl
  default-language: Haskell2010

executable smurf
  main-is: Main.hs
  other-modules:
      Paths_smurf
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , smurf
  default-language: Haskell2010
